--- a/Exercicios/ex01/style.css
+++ b/Exercicios/ex01/style.css
@@ -8,14 +8,35 @@
 :root {
     --cor-principal:rgb(31, 100, 165);
     --cor-letras:rgb(255, 255, 255);
+    background: linear-gradient(to bottom, rgb(14, 86, 119), rgb(22, 101, 138), rgb(143, 190, 243));
+    width: 100%;
+    height: 100%;
 }
 
 body {
-    background-color: var(--cor-principal);
     color: var(--cor-letras);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+header p {
+    columns: 2 ;
+}
+
 h1 {
     font-family: protest;
+    font-style: italic;
+    padding: 15px;
+}
+
+p {
+    padding: 10px;
+}
+
+a {
+    color: var(--cor-letras);
+    text-decoration: none;
+}
+
+a:hover {
+    color: brown;
 }
