--- a/Exercicios/ex01/style.css
+++ b/Exercicios/ex01/style.css
@@ -6,24 +6,38 @@
     font-style: normal;
 }
 :root {
-    --cor-principal:rgb(31, 100, 165);
     --cor-letras:rgb(255, 255, 255);
-    background: linear-gradient(to bottom, rgb(14, 86, 119), rgb(22, 101, 138), rgb(143, 190, 243));
-    width: 100%;
-    height: 100%;
+   
 }
 
 body {
     color: var(--cor-letras);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background: url(./images/Wallpaper.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+header {
+    margin: 5em 0em 1em 15%;
 }
 
 header p {
-    columns: 2 ;
+    font-family: protest,Verdana, Geneva, Tahoma, sans-serif;
+    font-size: large;
+}
+
+main {
+    background-color: #0e0e0e;
+    color: white;
+    width: 80%;
+    margin: auto;
+    border-radius: 2px;
 }
 
 #buxa {
-    width: 10em;
+    width: 8em;
+    margin: 10px;
 }
 
 h1, h2 {
@@ -31,14 +45,22 @@ h1, h2 {
     padding: 15px;
 }
 
-p {
-    padding: 10px;
+h1 {
+    margin: auto;
+    text-shadow: 2px 2px 0px black;
 }
 
-a {
-    color: rgb(128, 5, 5);
+h2 {
+    font-size: 1.5em;
+}
+
+footer a {
+    margin: 2em 0em 0em 2em;
+    color: white;
     text-decoration: none;
-    margin: 5em;
+    color: #ffc500;
+    text-shadow: 1px 1px 0px black;
+
 }
 
 a:hover {
@@ -47,4 +69,15 @@ a:hover {
 
 form {
     padding: 15px;
+}
+
+footer {
+    margin: auto;
+    color: white;
+    font-weight: bold;
+    background-color: #280033;
+    width: 80%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    height: 20em;
 }
